Adjust Hero's details

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <div class="header__links hide-for-mobile ">
                 <a href="">Home</a>
+                <a href="">About</a>
                 <a href="">Contact</a>
                 <a href="">Blog</a>
                 <a href="">Careers</a>
@@ -53,40 +54,35 @@
 
     </header>
 
-    <section class="hero flex flex-ai-c flex-jc-c">
-        <div class="hero__right container flex flex-jc-sb flex-ai-c">
-            <!-- <img src="images/image-confetti.jpg" alt="">
+    <section class="hero container flex flex-jc-sb">
 
-            <img src="images/image-currency.jpg" alt=""> -->
-sdfgh
+        <div class="hero__left ">
 
+            <div class="large_text" style="text-transform: uppercase;">
+                Prenez un RDV en ligne et trouvez un médecin
+            </div>
+            <div class="medium_text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, adipisci.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, adipisci.
+            </div>
+            <div class="hero__cta">
+                <button class="hero__btn ">
+                    Login
+                    <i class="fa fa-sign-in icons"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="hero__right ">
+            <img src="images/Group 17.png" class="hero__image" alt="">
         </div>
 
     </section>
 
 
-    <section class="hero flex flex-ai-c flex-jc-c">
-        <div class="hero__right container flex flex-jc-sb flex-ai-c">
-            <!-- <img src="images/image-confetti.jpg" alt="">
+<section >
 
-            <img src="images/image-currency.jpg" alt=""> -->
-sdfgh
-
-        </div>
-
-    </section>
-
-
-    <section class="hero flex flex-ai-c flex-jc-c">
-        <div class="hero__right container flex flex-jc-sb flex-ai-c">
-            <!-- <img src="images/image-confetti.jpg" alt="">
-
-            <img src="images/image-currency.jpg" alt=""> -->
-sdfgh
-
-        </div>
-
-    </section>
+</section class= >
 
     <script src="/app/js/script.js"></script>
 </body>
